[package]
name = "hug"
version = "0.1.0"
edition = "2021"

[features]
web = ["bevy_rapier3d/wasm-bindgen"]

[dependencies]
bevy = "0.5"
bevy_rapier3d = { git = "https://github.com/ryo33/bevy_rapier", rev = "57edbcd4376947415a125d61ae5e0dca020a5910" }
# bevy_mod_debugdump = "0.3"
bitflags = "1.3"
console_error_panic_hook = "0.1"
web-sys = "0.3"

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "3431335ee9a2e3cfda81485d8080f85c0bc50461" }
