[package]
name = "hug"
version = "0.1.0"
edition = "2021"

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/x11",
]

native = [ "bevy/bevy_wgpu" ]

web = ["bevy_rapier3d/wasm-bindgen", "bevy_webgl2"]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_rapier3d = { git = "https://github.com/ryo33/bevy_rapier", rev = "df37ed4661c25c0cfcf7727a905b15cff24e0a01" }
# bevy_mod_debugdump = "0.3"
bitflags = "1.3"
console_error_panic_hook = "0.1"
web-sys = "0.3"
bevy_webgl2 = { version = "0.5", optional = true }

[patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "3431335ee9a2e3cfda81485d8080f85c0bc50461" }
winit = { git = "https://github.com/ryo33/winit", rev = "590d44016e3cdf08c94165236a8ce246cb2efeaf", features = ["web-sys"] }
